--- a/pom.xml
+++ b/pom.xml
@@ -58,14 +58,12 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.46</version>
-		</dependency>
-
+		</dependency>	
 		
-
 <dependency>
     <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-entitymanager</artifactId>
-    <version>5.2.3.Final</version>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.2.10.Final</version>
 </dependency>
 
 	</dependencies>
