--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = sandy123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port=8080
+server.port=8081
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
