--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/test?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/test1?useSSL=false
 spring.datasource.username = root
 spring.datasource.password = sandy123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port=8081
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+server.port=8080
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
