--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
         - run: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -f ./Dockerfile -t sandeepyadav02/springboot_example .
+            docker build -f ./Dockerfile -t sandeepyadav02/springboot_example:$TAG .
             docker login -u $DOCKER_USER -p $DOCKER_PASS         
             docker push sandeepyadav02/springboot_example:$TAG
 
