--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,20 @@ jobs:
      steps:
         - checkout
             
-        - run: mvn clean install -DskipTests
+        - run: 
+            name: build project
+            command: mvn clean install -DskipTests
+                
              
         - setup_remote_docker:
             docker_layer_caching: true
         
 
-        - run: |
-            TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -f ./Dockerfile -t sandy0204/springboot:$TAG .
-            docker login -u $DOCKER_USER -p $DOCKER_PASS         
-            docker push sandy0204/springboot:$TAG
+        - run:
+            name: build and push docker image
+            command: |
+                TAG=0.1.$CIRCLE_BUILD_NUM
+                docker build -f ./Dockerfile -t sandy0204/springboot:$TAG .
+                docker login -u $DOCKER_USER -p $DOCKER_PASS         
+                docker push sandy0204/springboot:$TAG
 
