--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://mysql-docker-container:3306/test1?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/test1?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
 spring.datasource.password = sandy123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
