--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
         - checkout
             
         - run: 
-            name: build project
+            name: "build project"
             command: mvn clean install -DskipTests
                 
              
@@ -17,11 +17,16 @@ jobs:
         
 
         - run:
-            name: build and push docker image
+            name: "docker build"
+            command: "docker build -t $CIRCLE_PROJECT_REPONAME ."
+                
+        - run:
+            name: "Push to GCloud Image Registry" 
             command: |
-                TAG=0.1.$CIRCLE_BUILD_NUM
-                docker build -f ./Dockerfile -t sandy0204/springboot .
-                docker login -u $DOCKER_USER -p $DOCKER_PASS 
-                docker tag sandy0204/springboot sandy/springboot:latest       
-                docker push sandy0204/springboot:latest
-
+              echo $GCLOUD_SERVICE_KEY | base64 --decode --ignore-garbage > ${HOME}/gcloud-service-key.json
+              sudo /opt/google-cloud-sdk/bin/gcloud --quiet components update
+              sudo /opt/google-cloud-sdk/bin/gcloud auth activate-service-account --key-file ${HOME}/gcloud-service-key.json
+              sudo /opt/google-cloud-sdk/bin/gcloud config set project ${GCLOUD_PROJECT_ID}
+              sudo docker tag $CIRCLE_PROJECT_REPONAME gcr.io/${GCLOUD_PROJECT_ID}/$CIRCLE_PROJECT_REPONAME:$CIRCLE_SHA1
+              sudo /opt/google-cloud-sdk/bin/gcloud docker -- push gcr.io/${GCLOUD_PROJECT_ID}/$CIRCLE_PROJECT_REPONAME
+  
